waybar tidying and spotify

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -150,58 +150,23 @@ windowrule = noanim,                ^(wofi)$
 windowrule = noborder,              ^(wofi)$
 windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
-windowrule = float,                ^(org.telegram.desktop)$
-windowrule = dimaround,            ^(org.telegram.desktop)$
-windowrule = center,               ^(org.telegram.desktop)$
-windowrule = opacity $spd_opacity, ^(org.telegram.desktop)$
+windowrulev2 = float,                tag:scratchpad_window*
+windowrulev2 = size 70% 70%,         tag:scratchpad_window*
+windowrulev2 = opacity $spd_opacity, tag:scratchpad_window*
+windowrulev2 = center,               tag:scratchpad_window*
+windowrulev2 = dimaround,            tag:scratchpad_window*
 
-windowrule = float,                ^(swayimg_)
-windowrule = size 50% 50%,         ^(swayimg_)
-windowrule = dimaround,            ^(swayimg_)
-windowrule = center,               ^(swayimg_)
-windowrule = opacity $spd_opacity, ^(swayimg_)
+windowrule = tag +scratchpad_window, ^(org.telegram.desktop)$
+windowrule = tag +scratchpad_window, ^(swayimg_)
+windowrule = tag +scratchpad_window, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
+windowrule = tag +scratchpad_window, ^(brave-mail.google.com__mail_u_.-Default)$
+windowrule = tag +scratchpad_window, ^(ncspot)$
+windowrule = tag +scratchpad_window, ^(Spotify)$
+windowrule = tag +scratchpad_window, ^(brave-to-do.live.com.+)$
+windowrule = tag +scratchpad_window, ^(brave-keep.google.com.+)$
+windowrule = tag +scratchpad_window, ^(brave-open.spotify.com.+)$
+windowrule = tag +scratchpad_window, ^(brave-web.whatsapp.com.+)$
 
-windowrule = float,                ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = size 70% 70%,         ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = opacity $spd_opacity, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = center,               ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-windowrule = dimaround,            ^(brave-calendar.google.com__calendar_u_1_r-Default)$
-
-windowrule = float,                ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = size 70% 70%,         ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = opacity $spd_opacity, ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = center,               ^(brave-mail.google.com__mail_u_.-Default)$
-windowrule = dimaround,               ^(brave-mail.google.com__mail_u_.-Default)$
-
-windowrule = float,                ^(ncspot)$
-windowrule = size 70% 70%,         ^(ncspot)$
-windowrule = opacity $spd_opacity, ^(ncspot)$
-windowrule = center,               ^(ncspot)$
-windowrule = dimaround,               ^(ncspot)$
-
-windowrule = float,                ^(brave-to-do.live.com.+)$
-windowrule = size 70% 70%,         ^(brave-to-do.live.com.+)$
-windowrule = opacity $spd_opacity, ^(brave-to-do.live.com.+)$
-windowrule = center,               ^(brave-to-do.live.com.+)$
-windowrule = dimaround,               ^(brave-to-do.live.com.+)$
-
-windowrule = float,                ^(brave-web.whatsapp.com.+)$
-windowrule = size 70% 70%,         ^(brave-web.whatsapp.com.+)$
-windowrule = opacity $spd_opacity, ^(brave-web.whatsapp.com.+)$
-windowrule = center,               ^(brave-web.whatsapp.com.+)$
-windowrule = dimaround,               ^(brave-web.whatsapp.com.+)$
-
-windowrule = float,                ^(brave-keep.google.com.+)$
-windowrule = size 70% 70%,         ^(brave-keep.google.com.+)$
-windowrule = opacity $spd_opacity, ^(brave-keep.google.com.+)$
-windowrule = center,               ^(brave-keep.google.com.+)$
-windowrule = dimaround,               ^(brave-keep.google.com.+)$
-
-windowrule = float,                ^(brave-open.spotify.com.+)$
-windowrule = size 70% 70%,         ^(brave-open.spotify.com.+)$
-windowrule = opacity $spd_opacity, ^(brave-open.spotify.com.+)$
-windowrule = center,               ^(brave-open.spotify.com.+)$
-windowrule = dimaround,               ^(brave-open.spotify.com.+)$
 
 
 # KEY BINDINGS
@@ -410,9 +375,10 @@ plugin {
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
-        hyprbars-button = rgb($color3), 20, 󰖭, hyprctl dispatch exec ~/.config/scripts/selective_kill.sh
+        hyprbars-button = rgb($color5), 20, 󰖭, hyprctl dispatch exec ~/.config/scripts/selective_kill.sh
         hyprbars-button = rgb($color3), 20, , hyprctl dispatch fullscreen 1
         hyprbars-button = rgb($color3), 20, , hyprctl dispatch movetoworkspacesilent special:$scratchpad_name
+        hyprbars-button = rgb($color3), 20, 󰉈, hyprctl --batch "dispatch togglefloating; dispatch resizeactive exact 70% 70%; dispatch centerwindow; "
     }
     touch_gestures {
         sensitivity = 5.0
