--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -150,6 +150,11 @@ windowrule = noanim,                ^(wofi)$
 windowrule = noborder,              ^(wofi)$
 windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
+windowrule = float,                 ^(spotify-client)$
+windowrule = dimaround,             ^(spotify-client)$
+windowrule = center,                ^(spotify-client)$
+windowrule = noborder,              ^(spotify-client)$
+
 windowrulev2 = float,                tag:scratchpad_window*
 windowrulev2 = size 70% 70%,         tag:scratchpad_window*
 windowrulev2 = opacity $spd_opacity, tag:scratchpad_window*
@@ -161,7 +166,6 @@ windowrule = tag +scratchpad_window, ^(swayimg_)
 windowrule = tag +scratchpad_window, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = tag +scratchpad_window, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = tag +scratchpad_window, ^(ncspot)$
-windowrule = tag +scratchpad_window, ^(Spotify)$
 windowrule = tag +scratchpad_window, ^(brave-to-do.live.com.+)$
 windowrule = tag +scratchpad_window, ^(brave-keep.google.com.+)$
 windowrule = tag +scratchpad_window, ^(brave-open.spotify.com.+)$
