--- a/.local/share/applications/spotify.desktop
+++ b/.local/share/applications/spotify.desktop
@@ -3,8 +3,8 @@ Type=Application
 Name=Spotify
 GenericName=Music Player
 Icon=spotify-client
-Exec=bash -c '$HOME/.config/scripts/launch_one_instance.sh spotify-client "spotify --enable-features=WaylandWindowDecorations --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime %U"'
+Exec=bash -c '$HOME/.config/scripts/launch_one_instance.sh spotify-client "spotify"'
 Terminal=false
 MimeType=x-scheme-handler/spotify;
 Categories=Audio;Music;Player;AudioVideo;
-StartupWMClass=spotify
+StartupWMClass=spotify-client
