new theme and smth idk

--- a/.config/hypr/colors.conf
+++ b/.config/hypr/colors.conf
@@ -2,24 +2,24 @@
 $wallpaper="/home/yukna/Pictures/Wallpaper/cropped-image.jpg"
 
 # Special
-$cursor=A9A8AA
-$background=020103
-$foreground=A9A8AA
+$cursor=E0E1DE
+$background=0D0807
+$foreground=E0E1DE
 
 # Colors
-$color0=2D2B2F
-$color1=322753
-$color2=6B356E
-$color3=3F4F83
-$color4=6A4086
-$color5=7F3D65
-$color6=574A9B
-$color7=7C7B7E
-$color8=565658
-$color9=402956
-$color10=723A78
-$color11=495D97
-$color12=7C4A9B
-$color13=914574
-$color14=6859AF
-$color15=7C7B7E
+$color0=100A09
+$color1=478394
+$color2=498997
+$color3=83743F
+$color4=4E5EA2
+$color5=5A95AF
+$color6=A54F94
+$color7=CBCCC7
+$color8=8E8E8B
+$color9=539AAC
+$color10=6EAAB9
+$color11=AE9C56
+$color12=5A6AAF
+$color13=98BDCD
+$color14=C383B8
+$color15=CBCCC7
