--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ exec-once = hyprlock --immediate
 # GLOBAL VARIABLES
 
 $menu_paste = ~/.config/scripts/paste_menu.sh
-$term = footclient
+$term = foot
 $filebrowser = nemo
 $webbrowser = brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations
 $volume = ~/.config/scripts/volume.sh
@@ -36,7 +36,6 @@ monitor =, preferred,auto,auto
 
 # STARTUP
 exec-once = bash ~/.config/scripts/hyprland-plugin-script.sh
-exec-once = foot --server
 exec-once = hypridle
 exec-once = wbg $wallpaper
 exec-once = waybar
@@ -150,10 +149,10 @@ windowrule = noanim,                ^(wofi)$
 windowrule = noborder,              ^(wofi)$
 windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
-windowrule = float,                 ^(spotify-client)$
-windowrule = dimaround,             ^(spotify-client)$
-windowrule = center,                ^(spotify-client)$
-windowrule = noborder,              ^(spotify-client)$
+windowrule = float,                 ^(Spotify)$
+windowrule = dimaround,             ^(Spotify)$
+windowrule = center,                ^(Spotify)$
+windowrule = noborder,              ^(Spotify)$
 
 windowrulev2 = float,                tag:scratchpad_window*
 windowrulev2 = size 70% 70%,         tag:scratchpad_window*
