--- a/.config/foot/colors.ini
+++ b/.config/foot/colors.ini
@@ -1,32 +1,32 @@
 [colors]
 # alpha=1.0
-background=020103
-foreground=A9A8AA
+background=0D0807
+foreground=E0E1DE
 
 ## Normal/regular colors (color palette 0-7)
-regular0=2D2B2F  # black
-regular1=322753  # red
-regular2=6B356E  # green
-regular3=3F4F83  # yellow
-regular4=6A4086  # blue
-regular5=7F3D65  # magenta
-regular6=574A9B  # cyan
-regular7=7C7B7E  # white
+regular0=100A09  # black
+regular1=478394  # red
+regular2=498997  # green
+regular3=83743F  # yellow
+regular4=4E5EA2  # blue
+regular5=5A95AF  # magenta
+regular6=A54F94  # cyan
+regular7=CBCCC7  # white
 
 ## Bright colors (color palette 8-15)
-bright0=565658   # bright black
-bright1=402956   # bright red
-bright2=723A78   # bright green
-bright3=495D97   # bright yellow
-bright4=7C4A9B   # bright blue
-bright5=914574   # bright magenta
-bright6=6859AF   # bright cyan
-bright7=7C7B7E   # bright white
+bright0=8E8E8B   # bright black
+bright1=539AAC   # bright red
+bright2=6EAAB9   # bright green
+bright3=AE9C56   # bright yellow
+bright4=5A6AAF   # bright blue
+bright5=98BDCD   # bright magenta
+bright6=C383B8   # bright cyan
+bright7=CBCCC7   # bright white
 
 
 ## Misc colors
-selection-foreground=020103
-selection-background=A9A8AA
+selection-foreground=0D0807
+selection-background=E0E1DE
 urls=8be9fd
 
 # vim: ft=dosini
