--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -7,7 +7,7 @@ general {
 
 listener {
     timeout = 300
-    on-timeout = light -O && light -s 10
+    on-timeout = light -O && light -S 10
     on-resume = light -I
 }
 
