added python abilities woohoo

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,6 +41,7 @@ exec-once = wbg $wallpaper
 exec-once = waybar
 exec-once = iio-hyprland
 exec-once = dunst
+# exec-once = ibus-daemon --desktop=hyprland -d
 exec-once = lxqt-policykit-agent
 exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
@@ -137,7 +138,7 @@ general {
 # WINDOW RULES
 
 $spd_opacity = 0.9
-windowrule = opacity $spd_opacity, ^(foot)$
+#windowrule = opacity $spd_opacity, ^(foot)$
 windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
 windowrule = pseudo, fcitx
