many many things, like powermenu and things

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,14 +56,14 @@ exec-once = [workspace $scratchpad_name silent] telegram-desktop
 # exec-once = gio launch .config/autostart/*
 
 # ENV VAR
-
+$im_platform = wayland
 env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORM,wayland
 env = XDG_CURRENT_DESKTOP,hyprland
 env = _JAVA_AWT_WM_NONREPARENTING,1
-env = XMODIFIERS,@im=fcitx
-env = GTK_IM_MODULE,wayland
-env = QT_IM_MODULE,fcitx
+env = QT_QPA_PLATFORM,$im_platform
+env = XMODIFIERS,@im=$im_platform
+env = GTK_IM_MODULE,$im_platform
+env = QT_IM_MODULE,$im_platform
 env = RANGER_LOAD_DEFAULT_RC,FALSE
 env = SCRATCHPAD_NAME,$scratchpad_name
 
