--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -52,7 +52,7 @@ label {
 
 background {
     monitor =
-    path = $wallpaper
+    #path = $wallpaper
     color = rgb($background)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
