one-instance apps now launch or switch

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -379,6 +379,8 @@ plugin {
 
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
+
+        windowrulev2 = bordercolor rgb(880808),fullscreen:1
         hyprbars-button = rgb($color5), 20, 󰖭, hyprctl dispatch exec ~/.config/scripts/selective_kill.sh
         hyprbars-button = rgb($color3), 20, , hyprctl dispatch fullscreen 1
         hyprbars-button = rgb($color3), 20, , hyprctl dispatch movetoworkspacesilent special:$scratchpad_name
