--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -34,7 +34,7 @@
         "smooth-scrolling-threshold": 10, 
         "on-scroll-up": "playerctl next",
         "on-scroll-down": "playerctl previous",
-        "exec" : "$HOME/.config/waybar/custom_modules/mediaplayer.py",
+        "exec" : "$HOME/.config/waybar/custom_modules/mediaplayer.sh",
         "tooltip": true
     },
     "custom/weather": {
