nemo to thunar; updated flake; tried to enable webcam

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ source = ./colors.conf
 
 $menu_paste = ~/.config/scripts/paste_menu.sh
 $term = foot
-$filebrowser = nemo
+$filebrowser = thunar
 $webbrowser = brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations
 $volume = ~/.config/scripts/volume.sh
 $brightness = ~/.config/scripts/brightness.sh
@@ -145,7 +145,6 @@ windowrule = pseudo, fcitx
 windowrule = float,                 ^(wofi)$
 windowrule = dimaround,             ^(wofi)$
 windowrule = center,                ^(wofi)$
-windowrule = noanim,                ^(wofi)$
 windowrule = noborder,              ^(wofi)$
 windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
@@ -153,6 +152,10 @@ windowrule = float,                 ^(Spotify)$
 windowrule = dimaround,             ^(Spotify)$
 windowrule = center,                ^(Spotify)$
 windowrule = noborder,              ^(Spotify)$
+
+windowrule = float,                 ^(xdg-desktop-portal-gtk)$
+windowrule = dimaround,             ^(xdg-desktop-portal-gtk)$
+windowrule = center,                ^(xdg-desktop-portal-gtk)$
 
 windowrulev2 = float,                tag:scratchpad_window*
 windowrulev2 = size 70% 70%,         tag:scratchpad_window*
