--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -179,7 +179,7 @@
         "window-rewrite-default": "",
         "window-rewrite": {
             "foot": "",
-            "nemo": "",
+            "thunar": "",
             "brave-calendar.google.com__calendar_u_1_r-Default":"",
             "brave-mail.google.com__mail_u_.-Default": "",
             "brave-web.whatsapp.com__-Default": "",
