hyprland master-is-new deprecated?

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -112,9 +112,9 @@ dwindle {
     preserve_split = true 
 }
 
-master {
-    new_is_master = true
-}
+#master {
+#    new_is_master = true
+#}
 
 misc {
     disable_hyprland_logo = true
