banana cursor lol

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,6 +50,7 @@ exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = [workspace $scratchpad_name silent] gio launch ~/.local/share/applications/whatsapp.desktop
 exec-once = [workspace $scratchpad_name silent] telegram-desktop
+exec-once = hyprctl setcursor Banana 56
 # exec-once = ibus-daemon --desktop=hyprland -d
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = gio launch .config/autostart/*
