--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -50,7 +50,7 @@ exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = [workspace $scratchpad_name silent] gio launch ~/.local/share/applications/whatsapp.desktop
 exec-once = [workspace $scratchpad_name silent] telegram-desktop
-exec-once = hyprctl setcursor Banana 56
+exec-once = hyprctl setcursor Banana 24
 # exec-once = ibus-daemon --desktop=hyprland -d
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = gio launch .config/autostart/*
@@ -58,6 +58,8 @@ exec-once = hyprctl setcursor Banana 56
 # ENV VAR
 $im_platform = wayland
 env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Banana
+env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,hyprland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,$im_platform
@@ -164,6 +166,7 @@ windowrulev2 = opacity $spd_opacity, tag:scratchpad_window*
 windowrulev2 = center,               tag:scratchpad_window*
 windowrulev2 = dimaround,            tag:scratchpad_window*
 
+windowrule = plugin:hyprbars:nobar, ^(org.telegram.desktop)$
 windowrule = tag +scratchpad_window, ^(org.telegram.desktop)$
 windowrule = tag +scratchpad_window, ^(swayimg_)
 windowrule = tag +scratchpad_window, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
@@ -173,7 +176,6 @@ windowrule = tag +scratchpad_window, ^(brave-to-do.live.com.+)$
 windowrule = tag +scratchpad_window, ^(brave-keep.google.com.+)$
 windowrule = tag +scratchpad_window, ^(brave-open.spotify.com.+)$
 windowrule = tag +scratchpad_window, ^(brave-web.whatsapp.com.+)$
-
 
 
 # KEY BINDINGS
