trying to wrangle nvim to work

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -48,9 +48,9 @@ exec-once = blueman-applet
 exec-once = rfkill block bluetooth
 exec-once = ~/.config/scripts/start_ime.sh
 exec-once = ~/.config/scripts/start_squeekboard.sh
-exec-once = [workspace $scratchpad_name silent] gio launch ~/.local/share/applications/whatsapp.desktop
-exec-once = [workspace $scratchpad_name silent] telegram-desktop
 exec-once = hyprctl setcursor Banana 24
+exec-once = [workspace -98 silent] gio launch ~/.local/share/applications/whatsapp.desktop
+exec-once = [workspace -98 silent] telegram-desktop
 # exec-once = ibus-daemon --desktop=hyprland -d
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = gio launch .config/autostart/*
@@ -166,7 +166,8 @@ windowrulev2 = opacity $spd_opacity, tag:scratchpad_window*
 windowrulev2 = center,               tag:scratchpad_window*
 windowrulev2 = dimaround,            tag:scratchpad_window*
 
-windowrule = plugin:hyprbars:nobar, ^(org.telegram.desktop)$
+windowrule = size 71% 71%,         ^(org.telegram.desktop)$
+windowrule = plugin:hyprbars:nobar,  ^(org.telegram.desktop)$
 windowrule = tag +scratchpad_window, ^(org.telegram.desktop)$
 windowrule = tag +scratchpad_window, ^(swayimg_)
 windowrule = tag +scratchpad_window, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
