Fixing gtk_im_module=wayland issue

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,19 +56,25 @@ exec-once = [workspace -98 silent] telegram-desktop
 # exec-once = gio launch .config/autostart/*
 
 # ENV VAR
-$im_platform = wayland
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,Banana
-env = HYPRCURSOR_SIZE,24
-env = XDG_CURRENT_DESKTOP,hyprland
-env = _JAVA_AWT_WM_NONREPARENTING,1
-env = QT_QPA_PLATFORM,$im_platform
-env = XMODIFIERS,@im=$im_platform
+$im_platform = fcitx
 env = GTK_IM_MODULE,$im_platform
 env = QT_IM_MODULE,$im_platform
-env = RANGER_LOAD_DEFAULT_RC,FALSE
+env = QT_QPA_PLATFORM,$im_platform
 env = SCRATCHPAD_NAME,$scratchpad_name
-
+env = SDL_IM_MODULE,$im_platform
+env = XMODIFIERS,@im=$im_platform
+env = GTK_THEME,Adwaita:dark
+env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Banana
+env = MOZ_ENABLE_WAYLAND , 1 # ensure enable wayland for Firefox
+env = NIXOS_OZONE_WL , 1 # hint electron apps to use wayland
+env = NIXOS_XDG_OPEN_USE_PORTAL , 1 # needed to open apps after web login
+env = RANGER_LOAD_DEFAULT_RC,FALSE
+env = WLR_NO_HARDWARE_CURSORS , 1 # disable hardware cursors for wlroots
+env = WLR_RENDERER_ALLOW_SOFTWARE , 1 # enable software rendering for wlroots
+env = XCURSOR_SIZE,24
+env = XDG_CURRENT_DESKTOP,hyprland
+env = _JAVA_AWT_WM_NONREPARENTING,1
 # SETTINGS
 
 input {
