do not start squeekboard on startup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,7 +47,7 @@ exec-once = pulseaudio -D
 exec-once = blueman-applet
 exec-once = rfkill block bluetooth
 exec-once = ~/.config/scripts/start_ime.sh
-exec-once = ~/.config/scripts/start_squeekboard.sh
+#exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = hyprctl setcursor Banana 24
 exec-once = [workspace -98 silent] gio launch ~/.local/share/applications/whatsapp.desktop
 exec-once = [workspace -98 silent] telegram-desktop
