--- a/.local/share/applications/whatsapp.desktop
+++ b/.local/share/applications/whatsapp.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Whatsapp
-Exec=bash -c '$HOME/.config/scripts/launch_one_instance.sh brave-web.whatsapp.com__-Default "brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://web.whatsapp.com"'
+Exec=bash -c '$HOME/.config/scripts/launch_one_instance.sh brave-web.whatsapp.com__-Default "brave --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://web.whatsapp.com"'
 Terminal=false
 Type=Application
 Icon=whatsapp
