--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -31,6 +31,7 @@ $scratchpad_name = 󰉇
 # DISPLAY
 
 monitor = eDP-1, 3000x2000@60, 0x0, 2
+monitor = DP-3, 1920x1080@60, -1920x0, 1
 monitor =, preferred,auto,auto
 
 # STARTUP
