Add notification icon to disable

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -215,20 +215,15 @@
         "tooltip": false,
         "format": "{icon}",
         "format-icons": {
-            "notification": "<span foreground='red'><sup></sup></span>",
-            "none": "",
-            "dnd-notification": "<span foreground='red'><sup></sup></span>",
-            "dnd-none": "",
-            "inhibited-notification": "<span foreground='red'><sup></sup></span>",
-            "inhibited-none": "",
-            "dnd-inhibited-notification": "<span foreground='red'><sup></sup></span>",
-            "dnd-inhibited-none": ""
+            "notification-false": "<span foreground='red'><sup></sup></span> ",
+            "none-false": " ",
+            "notification-true": "<span foreground='red'><sup></sup></span> ",
+            "none-true": " ",
         },
         "return-type": "json",
-        "exec-if": "which swaync-client",
-        "exec": "swaync-client -swb",
-        "on-click": "sleep 0.5; swaync-client -t -sw",
-        "on-click-right": "swaync-client -d -sw",
+        "interval": 1,
+        "exec": "$HOME/.config/scripts/notification_check.sh",
+        "on-click": "sleep 0.5; dunstctl set-paused toggle",
         "escape": true,
         "max-length": 2
     },
