Force qt to use gtk file browser

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ $scratchpad_name = 󰉇
 # DISPLAY
 
 monitor = eDP-1, 3000x2000@60, 0x0, 2
-monitor = DP-3, 1920x1080, -1920x0, 1
+monitor = DP-3, 1920x1080@60, -1920x0, 1
 monitor =, preferred,auto,auto
 
 # STARTUP
@@ -59,9 +59,10 @@ exec-once = [workspace -98 silent] telegram-desktop
 
 # ENV VAR
 $im_platform = fcitx
+env = QT_QPA_PLATFORM,xcb
+env = QT_QPA_PLATFORMTHEME,gtk3  # force qt to use gtk file picker
 env = GTK_IM_MODULE,$im_platform
 env = QT_IM_MODULE,$im_platform
-env = QT_QPA_PLATFORM,$im_platform
 env = SCRATCHPAD_NAME,$scratchpad_name
 env = SDL_IM_MODULE,$im_platform
 env = XMODIFIERS,@im=$im_platform
