--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -175,7 +175,7 @@ windowrulev2 = opacity $spd_opacity, tag:scratchpad_window*
 windowrulev2 = center,               tag:scratchpad_window*
 windowrulev2 = dimaround,            tag:scratchpad_window*
 
-windowrule = tag +scratchpad_window, ^(org.telegram.desktop)$
+windowrule = tag +scratchpad_window, ^(TelegramDesktop)$
 windowrule = tag +scratchpad_window, ^(swayimg_)
 windowrule = tag +scratchpad_window, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = tag +scratchpad_window, ^(brave-mail.google.com__mail_u_.-Default)$
