Add stuff and things

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,8 +51,8 @@ exec-once = rfkill block bluetooth
 exec-once = ~/.config/scripts/start_ime.sh
 #exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = hyprctl setcursor Banana 24
-exec-once = [workspace -98 silent] gio launch ~/.local/share/applications/whatsapp.desktop
-exec-once = [workspace -98 silent] telegram-desktop
+exec-once = [workspace $scratchpad_name silent] gio launch ~/.local/share/applications/whatsapp.desktop
+exec-once = [workspace $scratchpad_name silent] telegram-desktop
 # exec-once = ibus-daemon --desktop=hyprland -d
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = gio launch .config/autostart/*
@@ -154,6 +154,11 @@ windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
 windowrule = pseudo, fcitx
 
+# windowrule = float,                 ^(jetbrains-idea-ce)$
+# windowrule = plugin:hyprbars:nobar, ^(jetbrains-idea-ce)$
+# windowrule = center,                ^(jetbrains-idea-ce)$
+# windowrule = noborder,              ^(jetbrains-idea-ce)$
+
 windowrule = float,                 ^(wofi)$
 windowrule = dimaround,             ^(wofi)$
 windowrule = center,                ^(wofi)$
@@ -176,6 +181,7 @@ windowrulev2 = center,               tag:scratchpad_window*
 windowrulev2 = dimaround,            tag:scratchpad_window*
 
 windowrule = tag +scratchpad_window, ^(org.telegram.desktop)$
+windowrule = tag +scratchpad_window, ^(TelegramDesktop)$
 windowrule = tag +scratchpad_window, ^(.telegram-desktop-wrapped)$
 windowrule = tag +scratchpad_window, ^(swayimg_)
 windowrule = tag +scratchpad_window, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
