Upgrade and change theme

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,13 +59,13 @@ exec-once = [workspace $scratchpad_name silent] telegram-desktop
 
 # ENV VAR
 $im_platform = fcitx
-env = QT_QPA_PLATFORM,xcb
+env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,gtk3  # force qt to use gtk file picker
 env = GTK_IM_MODULE,$im_platform
 env = QT_IM_MODULE,$im_platform
-env = SCRATCHPAD_NAME,$scratchpad_name
 env = SDL_IM_MODULE,$im_platform
 env = XMODIFIERS,@im=$im_platform
+env = SCRATCHPAD_NAME,$scratchpad_name
 env = GTK_THEME,Adwaita:dark
 env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Banana
@@ -187,7 +187,7 @@ windowrule = tag +scratchpad_window, ^(swayimg_)
 windowrule = tag +scratchpad_window, ^(brave-calendar.google.com__calendar_u_1_r-Default)$
 windowrule = tag +scratchpad_window, ^(brave-mail.google.com__mail_u_.-Default)$
 windowrule = tag +scratchpad_window, ^(ncspot)$
-windowrule = tag +scratchpad_window, ^(brave-to-do.live.com.+)$
+windowrule = tag +scratchpad_window, ^(brave-ticktick.com__webapp_-Default)$
 windowrule = tag +scratchpad_window, ^(brave-keep.google.com.+)$
 windowrule = tag +scratchpad_window, ^(brave-open.spotify.com.+)$
 windowrule = tag +scratchpad_window, ^(brave-web.whatsapp.com.+)$
