--- a/.local/share/applications/todo.desktop
+++ b/.local/share/applications/todo.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=todo (Microsoft)
+Name=todo (TickTick)
 Exec=bash -c '$HOME/.config/scripts/launch_one_instance.sh brave-ticktick_com_webapp_-Default "brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://ticktick.com/webapp/"'
 Terminal=false
 Type=Application
