--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -186,6 +186,7 @@
             "brave-web.whatsapp.com__-Default": "",
             "brave-to-do.live.com__tasks_today-Default": "",
             "brave-keep.google.com__u_1_-Default": "󰛜",
+            "brave-ticktick.com__webapp_-Default": "",
             "org.telegram.desktop": "",
             "brave-browser": "󰖟",
             "brave-open.spotify.com__-Default": "",
@@ -218,9 +219,9 @@
         "format": "{icon}",
         "format-icons": {
             "notification-false": "<span foreground='red'><sup></sup></span> ",
-            "none-false": " ",
+            "none-false": "  ",
             "notification-true": "<span foreground='red'><sup></sup></span> ",
-            "none-true": " ",
+            "none-true": "  ",
         },
         "return-type": "json",
         "interval": 1,
