Add new color scheme

--- a/.config/foot/colors.ini
+++ b/.config/foot/colors.ini
@@ -1,32 +1,32 @@
 [colors]
 # alpha=1.0
-background=0D0807
-foreground=E0E1DE
+background=1b223f
+foreground=bdcaff
 
 ## Normal/regular colors (color palette 0-7)
-regular0=100A09  # black
-regular1=478394  # red
-regular2=498997  # green
-regular3=83743F  # yellow
-regular4=4E5EA2  # blue
-regular5=5A95AF  # magenta
-regular6=A54F94  # cyan
-regular7=CBCCC7  # white
+regular0=1b223f  # black
+regular1=ff007c  # red
+regular2=b5ee38  # green
+regular3=ff9e64  # yellow
+regular4=234b85  # blue
+regular5=bd98ff  # magenta
+regular6=8cfffe  # cyan
+regular7=bdcaff  # white
 
 ## Bright colors (color palette 8-15)
-bright0=8E8E8B   # bright black
-bright1=539AAC   # bright red
-bright2=6EAAB9   # bright green
-bright3=AE9C56   # bright yellow
-bright4=5A6AAF   # bright blue
-bright5=98BDCD   # bright magenta
-bright6=C383B8   # bright cyan
-bright7=CBCCC7   # bright white
+bright0=394779   # bright black
+bright1=ff757f   # bright red
+bright2=00d9bd   # bright green
+bright3=ffc777   # bright yellow
+bright4=0057c4   # bright blue
+bright5=a86dff   # bright magenta
+bright6=7dcfff   # bright cyan
+bright7=4c5b91   # bright white
 
 
 ## Misc colors
-selection-foreground=0D0807
-selection-background=E0E1DE
-urls=8be9fd
+selection-foreground=242d4d
+selection-background=a2b0ea
+urls=00a8ba
 
 # vim: ft=dosini
