--- a/.config/foot/colors.ini
+++ b/.config/foot/colors.ini
@@ -1,32 +1,32 @@
 [colors]
-# alpha=1.0
-background=1b223f
-foreground=bdcaff
+# alpha=1 | 0
+background=080C1C
+foreground=CCD6FF
 
 ## Normal/regular colors (color palette 0-7)
-regular0=1b223f  # black
-regular1=ff007c  # red
-regular2=b5ee38  # green
-regular3=ff9e64  # yellow
-regular4=234b85  # blue
-regular5=bd98ff  # magenta
-regular6=8cfffe  # cyan
-regular7=bdcaff  # white
+regular0=080C1C  # black
+regular1=FF007C  # red
+regular2=B5EE38  # green
+regular3=FF9E64  # yellow
+regular4=234B85  # blue
+regular5=BD98FF  # magenta
+regular6=8CFFFE  # cyan
+regular7=CCD6FF  # white
 
 ## Bright colors (color palette 8-15)
 bright0=394779   # bright black
-bright1=ff757f   # bright red
-bright2=00d9bd   # bright green
-bright3=ffc777   # bright yellow
-bright4=0057c4   # bright blue
-bright5=a86dff   # bright magenta
-bright6=7dcfff   # bright cyan
-bright7=4c5b91   # bright white
+bright1=FF757F   # bright red
+bright2=00D9BD   # bright green
+bright3=FFC777   # bright yellow
+bright4=0057C4   # bright blue
+bright5=A86DFF   # bright magenta
+bright6=7DCFFF   # bright cyan
+bright7=4C5B91   # bright white
 
 
 ## Misc colors
-selection-foreground=242d4d
-selection-background=a2b0ea
+selection-foreground=080C1C
+selection-background=CCD6FF
 urls=00a8ba
 
 # vim: ft=dosini
