--- a/.config/wallust/templates/foot.ini
+++ b/.config/wallust/templates/foot.ini
@@ -1,32 +1,32 @@
 [colors]
-# alpha=1.0
-background={{background.strip}}
-foreground={{foreground.strip}}
+# alpha=1 | 0
+background={{background | strip}}
+foreground={{foreground | strip}}
 
 ## Normal/regular colors (color palette 0-7)
-regular0={{color0.strip}}  # black
-regular1={{color1.strip}}  # red
-regular2={{color2.strip}}  # green
-regular3={{color3.strip}}  # yellow
-regular4={{color4.strip}}  # blue
-regular5={{color5.strip}}  # magenta
-regular6={{color6.strip}}  # cyan
-regular7={{color7.strip}}  # white
+regular0={{color0 | strip}}  # black
+regular1={{color1 | strip}}  # red
+regular2={{color2 | strip}}  # green
+regular3={{color3 | strip}}  # yellow
+regular4={{color4 | strip}}  # blue
+regular5={{color5 | strip}}  # magenta
+regular6={{color6 | strip}}  # cyan
+regular7={{color7 | strip}}  # white
 
 ## Bright colors (color palette 8-15)
-bright0={{color8.strip}}   # bright black
-bright1={{color9.strip}}   # bright red
-bright2={{color10.strip}}   # bright green
-bright3={{color11.strip}}   # bright yellow
-bright4={{color12.strip}}   # bright blue
-bright5={{color13.strip}}   # bright magenta
-bright6={{color14.strip}}   # bright cyan
-bright7={{color15.strip}}   # bright white
+bright0={{color8 | strip}}   # bright black
+bright1={{color9 | strip}}   # bright red
+bright2={{color10 | strip}}   # bright green
+bright3={{color11 | strip}}   # bright yellow
+bright4={{color12 | strip}}   # bright blue
+bright5={{color13 | strip}}   # bright magenta
+bright6={{color14 | strip}}   # bright cyan
+bright7={{color15 | strip}}   # bright white
 
 
 ## Misc colors
-selection-foreground={{background.strip}}
-selection-background={{foreground.strip}}
-urls=8be9fd
+selection-foreground={{background | strip}}
+selection-background={{foreground | strip}}
+urls=00a8ba
 
 # vim: ft=dosini
