--- a/.local/share/applications/todo.desktop
+++ b/.local/share/applications/todo.desktop
@@ -3,7 +3,7 @@ Name=todo (TickTick)
 Exec=bash -c '$HOME/.config/scripts/launch_one_instance.sh brave-ticktick_com_webapp_-Default "brave --gtk-version=4 --enable-features=UseOzonePlatform --ozone-platform=wayland --enable-wayland-ime --enable-features=WaylandWindowDecorations --profile-directory=Default --app=https://ticktick.com/webapp/"'
 Terminal=false
 Type=Application
-Icon=to-do-app
-StartupWMClass=crx_gmail_1
+Icon=todo
+StartupWMClass=crx_ticktick_1
 Comment=TickTick to-do
 Categories=Network;todo;planner;
