Change border colors

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -143,11 +143,16 @@ general {
     gaps_in = 5
     gaps_out = 10
     border_size = 2
-    col.active_border = rgba($color14ee)
-    col.inactive_border = rgba($color1ff)
+    col.active_border = rgba($color1DD)
+    col.inactive_border = rgba($color14DD)
     layout = dwindle
     resize_on_border = true
 }
+windowrulev2 = bordercolor rgba($color9DD),fullscreen:1
+windowrulev2 = plugin:hyprbars:bar_color rgba($color9DD),fullscreen:1
+
+windowrulev2 = bordercolor rgba($color2DD),floating:1
+windowrulev2 = plugin:hyprbars:bar_color rgba($color2DD),floating:1
 
 # WINDOW RULES
 
@@ -384,7 +389,7 @@ gestures {
 plugin {
     hyprbars {
         bar_height = 30
-        bar_color = rgba($color14AA)
+        bar_color = rgba($color14DD)
         bar_precedence_over_border = 1
         bar_part_of_window = 1
         # bar_color -> (col) bar's background color
@@ -403,7 +408,6 @@ plugin {
         # example buttons (R -> L)
         # hyprbars-button = color, size, on-click
 
-        windowrulev2 = bordercolor rgb(880808),fullscreen:1
         hyprbars-button = rgb($color5), 20, 󰖭, hyprctl dispatch exec ~/.config/scripts/selective_kill.sh
         hyprbars-button = rgb($color3), 20, , hyprctl dispatch fullscreen 1
         hyprbars-button = rgb($color3), 20, , hyprctl dispatch movetoworkspacesilent special:$scratchpad_name
