Fix xdg portal not working

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,8 +51,8 @@ exec-once = rfkill block bluetooth
 exec-once = ~/.config/scripts/start_ime.sh
 #exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = hyprctl setcursor Banana 24
-exec-once = [workspace $scratchpad_name silent] gio launch ~/.local/share/applications/whatsapp.desktop
-exec-once = [workspace $scratchpad_name silent] telegram-desktop
+exec-once = gio launch ~/.local/share/applications/whatsapp.desktop && sleep 2 && ~/.config/scripts/swap_scratchpad.sh
+exec-once = telegram-desktop && sleep 2 && ~/.config/scripts/swap_scratchpad.sh
 # exec-once = ibus-daemon --desktop=hyprland -d
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = gio launch .config/autostart/*
@@ -60,7 +60,8 @@ exec-once = [workspace $scratchpad_name silent] telegram-desktop
 # ENV VAR
 $im_platform = fcitx
 env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,gtk3  # force qt to use gtk file picker
+env = QT_QPA_PLATFORMTHEME, gtk3  # force qt to use gtk file picker
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION, 1
 env = GTK_IM_MODULE,$im_platform
 env = QT_IM_MODULE,$im_platform
 env = SDL_IM_MODULE,$im_platform
@@ -71,6 +72,7 @@ env = HYPRCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,Banana
 env = MOZ_ENABLE_WAYLAND , 1 # ensure enable wayland for Firefox
 env = NIXOS_OZONE_WL , 1 # hint electron apps to use wayland
+env = GTK_USE_PORTAL , 1
 env = NIXOS_XDG_OPEN_USE_PORTAL , 1 # needed to open apps after web login
 env = RANGER_LOAD_DEFAULT_RC,FALSE
 env = WLR_NO_HARDWARE_CURSORS , 1 # disable hardware cursors for wlroots
@@ -107,7 +109,7 @@ decoration {
     inactive_opacity = 0.8
     
     dim_inactive = true
-    dim_strength = -0.4
+    dim_strength = -0.2
     dim_around = 0.4
 }
 
