fix invalid decoration variables

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -100,10 +100,10 @@ input {
 decoration {
     rounding = 0
     
-    drop_shadow = false
-    shadow_range = 10
-    shadow_render_power = 2
-    col.shadow = rgba($color13ee)
+    # drop_shadow = false
+    # shadow_range = 10
+    # shadow_render_power = 2
+    # col.shadow = rgba($color13ee)
     
     active_opacity = 1.0
     inactive_opacity = 0.8
