--- a/.config/fcitx5/conf/clipboard.conf
+++ b/.config/fcitx5/conf/clipboard.conf
@@ -1,3 +1,5 @@
+# Paste Primary
+PastePrimaryKey=
 # Number of entries
 Number of entries=10
 # Do not show password from password managers
@@ -9,7 +11,4 @@ ClearPasswordAfter=30
 
 [TriggerKey]
 0=Control+Shift+V
-
-[PastePrimaryKey]
-0=Control+V
 
