--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 .config/scripts/hyprland-plugin-script.sh
 .config/zsh/.zcompdump
 .config/zsh/.zshrc.zwc
+.config/zsh/.zsh_history
 .config/Thunar/accels.scm
