--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -175,10 +175,9 @@ windowrule = center,                ^(wofi)$
 windowrule = noborder,              ^(wofi)$
 windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
-windowrule = float,                 ^(Spotify)$
-windowrule = dimaround,             ^(Spotify)$
-windowrule = center,                ^(Spotify)$
-windowrule = noborder,              ^(Spotify)$
+windowrule = float,                 ^(spotify)$
+windowrule = dimaround,             ^(spotify)$
+windowrule = center,                ^(spotify)$
 
 windowrule = float,                 ^(xdg-desktop-portal-gtk)$
 windowrule = dimaround,             ^(xdg-desktop-portal-gtk)$
