Change font to jetbrains

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,7 +9,7 @@
 # locked-title=no
 
 include=~/.config/foot/colors.ini
-font=FiraCode Nerd Font Mono Med:size=12
+font=JetBrainsMono Nerd Font Mono:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
