--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -42,7 +42,7 @@ label {
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
     color = rgb($foreground)
     font_size = 96
-    font_family = Fira Code
+    font_family = JetBrainsMono NFP
     rotate = 0 # degrees, counter-clockwise
 
     position = 0, 160
